package org.bepass.oblivion.ui

object UiTestTags {
  const val SPLASH = "splash_screen"
  const val HOME = "home_screen"
  const val VPN_SWITCH = "vpn_switch"
  const val SETTINGS = "settings_screen"
  const val INFO = "info_screen"
  const val LOGS = "logs_screen"
  const val SPLIT_TUNNEL = "split_tunnel_screen"
}
